# VOWLGrapher

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  build_mimalloc.sh  flake.nix  rust-toolchain.toml
.cargo/: config.toml
benches/: serializer.rs
crates/database/: Cargo.toml
crates/database/data/owl-rdf/: annotation-on-inverse.owl
crates/database/src/: cleanup.rs  errors.rs  lib.rs  main.rs  serializers.rs  store.rs
crates/database/src/serializers/: frontend.rs  index.rs  metadata.rs  util.rs
crates/database/src/vocab/: owl.rs  rdf.rs  xsd.rs
crates/parser/: Cargo.toml
crates/parser/src/: errors.rs  lib.rs  parser_util.rs
crates/perfdebugger/: Cargo.toml  README.md
crates/perfdebugger/src/: main.rs
crates/serializer/: Cargo.toml
crates/serializer/src/: datastructures.rs  errors.rs  lib.rs  serializer_util.rs
crates/serializer/src/datastructures/: edge_data.rs  graph_metadata_buffer.rs  index.rs  serialization_data_buffer.rs  triple.rs
crates/serializer/src/serializer_util/: buffers.rs  edges.rs  entity_creation.rs  labels.rs  nodes.rs  serialize_triple.rs  write_triple.rs
crates/serializer/src/serializer_util/edges/: characteristics.rs  restrictions.rs
crates/serializer/src/serializers/: frontend.rs
crates/serializer/src/vocab/: dcmi.rs  owl.rs
crates/sparql_queries/: Cargo.toml
crates/sparql_queries/src/: assembly.rs  lib.rs  main.rs  snippets.rs
crates/sparql_queries/src/reference/: default.rq  default_compact.rq
crates/sparql_queries/src/snippets/: characteristic.rs  element_type.rs  general.rs  metadata.rs  owl.rs  rdf.rs  rdfs.rs  void.rs  xsd.rs
crates/sparql_queries/src/snippets/metadata/: dcmi.rs
crates/util/: Cargo.toml
crates/util/src/: datatypes.rs  env.rs  error_handler.rs  layout.rs  lib.rs  time.rs
public/data/: ontovibe.ttl
src/: app.rs  components.rs  env.rs  error.rs  errors.rs  events.rs  lib.rs  main.rs
src/assets/: about_description.txt
src/assets/data/: vowlgrapher-benchmark-2500.ofn
src/blocks/: right_sidebar.rs  workbench.rs
src/blocks/right_sidebar/: ontology_header.rs  selection_details.rs
src/blocks/workbench/: about_menu.rs  error_log.rs  export_menu.rs  filter_menu.rs  ontology_menu.rs  options_menu.rs  query_menu.rs
src/blocks/workbench/filter_menu/: element_legend_injection.rs  filtergroup.rs  filtertype.rs
src/blocks/workbench/ontology_menu/: stored_ontology.rs
src/components/: icon.rs  lists.rs  progress_bar.rs  table.rs
src/components/buttons/: graph_interaction_buttons.rs
src/components/user_input/: file_upload.rs  internal_sparql.rs  stored_ontology.rs
style/: main.scss
