[package]
    authors.workspace=true
    description="Database code for VOWL-R"
    edition.workspace=true
    keywords=["rdf", "graph", "sparql", "datafusion"]
    license-file.workspace=true
    name="vowlr-database"
    readme="README.md"
    repository.workspace=true
    version.workspace=true

[lib]
    crate-type=["cdylib", "rlib"]

[lints]
    workspace=true

[dependencies]
    env_logger={workspace=true}
    fluent-uri="0.4.1"
    futures={workspace=true}
    grapher={workspace=true}
    horned-owl={workspace=true}
    log={workspace=true}
    memchr="2.7.6"
    oxrdf="0.3.1"
    rdf-fusion={workspace=true}
    smallvec={workspace=true}
    tempfile="3.10"
    test-generator="^0.3"
    tokio={workspace=true}
    unescape_zero_copy="2.3.1"
    vowlr-parser={path="../parser"}
    vowlr-sparql-queries={path="../sparql_queries"}
    vowlr-util={path="../util"}
