[package]
    authors.workspace=true
    description="Parsers for various OWL and RDF formats supported by VOWL-R"
    edition.workspace=true
    keywords=["parser", "owl", "rdf"]
    license-file.workspace=true
    name="vowlr-parser"
    readme="README.md"
    repository.workspace=true
    version.workspace=true

[lib]
    crate-type=["cdylib", "rlib"]

[lints]
    workspace=true

[dependencies]
    futures.workspace=true
    horned-owl.workspace=true
    leptos.workspace=true
    log.workspace=true
    rdf-fusion.workspace=true
    serde="1.0"
    strum.workspace=true
    tokio.workspace=true
    tokio-stream="0.1.17"
    vowlr-util={path="../util"}

[dev-dependencies]
    env_logger.workspace=true
