[package]
    authors=["TheRealMorgenfrue"]
    description="Performance & Debugging primarily of WasmGrapher, but works across all crates constituting VOWL-R"
    edition.workspace=true
    keywords.workspace=true
    license-file.workspace=true
    name="perfdebugger"
    readme="README.md"
    repository.workspace=true
    version.workspace=true

[lints]
    workspace=true

[dependencies]
    env_logger="0.11.0"
    grapher={workspace=true, features=["native", "static"]}
    log="0.4"
    tokio="1.48.0"
    vowlr-database={path="../database"}
    vowlr-sparql-queries={path="../sparql_queries"}
