[package]
    authors.workspace=true
    description="Shared SPARQL query strings for VOWL-R (WASM-safe)."
    edition.workspace=true
    keywords.workspace=true
    license-file.workspace=true
    name="vowlr-sparql-queries"
    readme="README.md"
    repository.workspace=true
    version.workspace=true

[lib]
    path="src/lib.rs"

[lints]
    workspace=true

[dependencies]
    grapher={workspace=true}
    vowlr-util={path="../util"}
