[package]
    authors=["TheRealMorgenfrue", "LouiseWolff17"]
    description="Utility code used by the entire VOWL-R workspace"
    edition="2024"
    license-file="LICENSE"
    name="vowlr-util"
    readme="README.md"
    repository="https://github.com/WebVOWL/VOWL-R"
    version="0.1.0"

[lib]
    crate-type=["cdylib", "rlib"]


[dependencies]
    leptos.workspace=true
    # leptos-struct-table.workspace=true
    log.workspace=true
    rkyv.workspace=true
    serde={version="1.0", features=["derive"]}
    strum.workspace=true
    tabled={version="0.20", optional=true}

[features]
    server=["dep:tabled"]
