[package]
    authors.workspace=true
    description="Utility code used by the entire VOWL-R workspace"
    edition.workspace=true
    keywords.workspace=true
    license-file.workspace=true
    name="vowlr-util"
    readme="README.md"
    repository.workspace=true
    version.workspace=true

[lib]
    crate-type=["cdylib", "rlib"]

[lints]
    workspace=true

[dependencies]
    leptos.workspace=true
    log.workspace=true
    rkyv.workspace=true
    serde.workspace=true
    strum.workspace=true
    tabled={version="0.20", optional=true}
    time={version="0.3.47", features=["formatting", "macros"]}

[features]
    server=["dep:tabled"]
