[package]
    authors.workspace=true
    description="Utility code used by the entire VOWL-R workspace"
    edition.workspace=true
    keywords.workspace=true
    license-file.workspace=true
    name="vowlr-util"
    readme="README.md"
    repository.workspace=true
    version.workspace=true

[lib]
    crate-type=["cdylib", "rlib"]

[lints]
    workspace=true

[dependencies]
    actix-session={workspace=true, optional=true}
    leptos.workspace=true
    leptos_actix={workspace=true, optional=true}
    log.workspace=true
    rkyv.workspace=true
    serde.workspace=true
    strum.workspace=true
    tabled={version="0.20", optional=true}
    time={version="0.3.47", features=["formatting", "macros"]}
    uuid={version="1.22.0", features=["v4"], optional=true}
    web-sys={workspace=true, features=[
        "Window",
        "Performance",
        "PerformanceTiming",
    ], optional=true}

[features]
    server=["dep:tabled"]
    ssr=["dep:leptos_actix", "dep:actix-session", "dep:uuid"]
    wasm=["time/wasm-bindgen", "dep:web-sys"]
